# Nutrition-coach-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  env.docker.example  pyproject.toml  render.yaml  requirements.txt
backend/: app_entry.py  config.py  main.py  nutrition_coach.db  pyproject.toml
backend/agents/: base.py  coaching_agent.py  food_analyzer_agent.py  market_intelligence_agent.py  meal_planner_agent.py  nutrition_knowledge_agent.py
backend/api/routers/: __init__.py  analyze_food.py  foods.py  market.py  marketplace.py  meal_plan.py  profile.py
backend/database/: connection.py  models.py
backend/graph/: intent_router.py  workflow.py
backend/nutrition_coach_agent.egg-info/: SOURCES.txt  top_level.txt
backend/providers/: __init__.py  base.py  cache.py  nutritionix.py  openfoodfacts.py  registry.py  usda.py
backend/rag/: knowledge_base.py  vector_store.py
backend/schemas/: __init__.py  chat.py  food_analysis.py  marketplace.py  meal_plan.py  nutrition.py  user.py
backend/services/: llm_service.py  meal_synthesizer.py
backend/tools/: food_database.py
frontend/: .env.example  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analyze-food/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/market/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/app/marketplace/orders/: page.tsx
frontend/app/marketplace/sell/: page.tsx
frontend/app/meal-plan/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/: MealPlanCard.tsx  Navbar.tsx  SignInDialog.tsx  ThemeToggle.tsx
frontend/lib/: public-api-url.ts  theme-context.tsx  user-context.tsx
frontend/services/: api.ts
nutrition_coach_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
