[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutrition-coach-agent"
version = "1.0.0"
description = "AI-powered nutrition coaching platform (FastAPI backend)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-groq",
    "langgraph",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "pydantic[email]",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-dotenv",
    "faiss-cpu",
    "chromadb",
    "openai",
    "groq",
    "requests",
    "aiohttp",
    "numpy",
    "pandas",
    "psycopg2-binary",
]

[tool.setuptools]
py-modules = []

# FastAPI CLI / FastAPI Cloud: resolve the app from the repo root without
# passing ``backend/main.py`` on the command line.
# https://fastapicloud.com/docs/builds-and-deployments/configuring-fastapi/
[tool.fastapi]
entrypoint = "app_entry:app"
